syntax = "proto3";

service FileService {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse);
  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse);
}

message UploadRequest {
  int32 fileId = 1;
  bytes chunk = 2;
}

message UploadResponse {
  bool success = 1;
}

message DownloadRequest {
  int32 fileId = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}

